# easy_ge

./: .gitignore  .pre-commit-config.yaml  =1.17.106  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh  expectation_suite.md  k8s_manifest.yaml  pyproject.toml  sample_config.yaml  schema.json  setup.py
.github/workflows/: cicd.yaml  dev.yaml  main.yaml
docs/: pypi_readme.md  pypi_readme.txt
docs/examples/: in_memory_dataframe_to_local_filesystem.yaml  in_memory_dataframe_to_s3.yaml  local_file_to_local_filesystem.yaml
easy_ge/: __init__.py  docker_entry.py  entrypoint.py  expectation_manager.py  helpers.py  main.py
easy_ge/templates/: checkpoint.tpl  great_expectations.tpl  schema.json
evaluation_parameters/: .ge_store_backend_id
examples/: file_on_local_filesystem_config.yaml  full_options_config_file.yaml  in_memory_save_to_gcs_config.yaml  local_file_to_gcs.yaml  local_file_to_s3_config.yaml
expectations/: .ge_store_backend_id  yellow.json
great_expectations_wrapper/: helpers.py  logic.py
templates/: checkpoint.tpl  great_expectations.tpl
tests/: test_config_loader.py  test_expectation_manager.py  test_local_integration.py  test_main.py  test_template_handler.py
tests/integration/: run_integration.sh
tests/test_configs/: in_memory_config.yaml  in_memory_config_w.yaml  invalid_config.yaml  invalid_config2.yaml  invalid_schema.json  local_file_config.yaml  local_file_config_w.yaml  sample_config.yaml  sample_data.csv  sample_file.csv  valid_config.yaml  valid_config2.yaml  valid_schema.json
tests/test_configs/expectations/: .ge_store_backend_id
validations/: .ge_store_backend_id
