[tool.poetry]
name = "easy_ge"
version = "0.1.0"
description = ""
authors = ["Elsayed91 <islam.elsayed.da@gmail.com>"]
readme = "README.md"
packages = [{include = "great_expectations_wrapper"}]

[tool.poetry.dependencies]
python = "^3.10"
great-expectations = "^0.17.4"
pyyaml = "^6.0"
jsonschema = "^4.18.0"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
