[tool.poetry]
name = "easy_ge"
version = "0.1.0"
description = "A package that abstracts the complexity of Great Expectations away. At least for straight forward use cases."
authors = ["Elsayed91 <elsayed.is@outlook.com>"]
readme = "readme.md"
packages = [{include = "easy_ge"}]

[tool.poetry.dependencies]
python = "^3.10"
great-expectations = "^0.17.4"
pyyaml = "^6.0"
jsonschema = "^4.18.0"
jinja2 = "^3.1.2"
google-cloud-storage = {version = "^2.10.0", optional = true}
google-cloud-secret-manager = {version = "^2.16.2", optional = true}
pyarrow = "^12.0.1"
fsspec = "^2023.6.0"
gcsfs = {version = "^2023.6.0", optional = true}
s3fs = {version = "^2023.6.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pre-commit = "^3.3.3"

[tool.poetry.extras]
aws = ["s3fs"]
google = ["google-cloud-secret-manager", "google-cloud-storage", "gcsfs"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"
pythonpath = "."


