[tool.poetry]
name = "easy_ge"
version = "0.1.9"
description = "A package that abstracts the complexity of Great Expectations away. At least for straight forward use cases."
authors = ["Elsayed91 <elsayed.is@outlook.com>"]
readme = "readme.md"
packages = [{include = "easy_ge"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
jsonschema = "^4.18.0"
jinja2 = "^3.1.2"
google-cloud-storage = {version = "^2.10.0", optional = true}
google-cloud-secret-manager = {version = "^2.16.2", optional = true}
gcsfs = {version = "^2023.6.0", optional = true}
pyarrow = "^12.0.1"
great-expectations = {extras = ["s3"], version = "^0.17.4"}
fsspec = "^2023.6.0"
boto3 = "^1.28.2"





[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pre-commit = "^3.3.3"
flake8 = "^6.0.0"
isort = "^5.12.0"
localstack = "^2.1.0"
awscli-local = "^0.20"

[tool.poetry.extras]
aws = ["s3fs"]
google = ["google-cloud-secret-manager", "google-cloud-storage", "gcsfs"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"
pythonpath = "easy_ge"


